--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body>
     <div id="container">
         <header class="header">
-            <a href="#" class="=title">
-                <img src="images/nikukyu_1.jpg" alt="アイコン" class="icon">
-                滑石きたむら動物病院</a>
+            <div href="#" class="title">
+                <img src="images/nikukyu_1.jpg" alt="アイコン" class="header-icon">
+                <span class="header-title">滑石きたむら動物病院</span>
+            </div>    
             <div class="nav_content">
                 <nav class="header_nav li">
                     <ul class="nav_list">
@@ -30,63 +31,73 @@
                 </nav>
             </div>
         </header>
-        <section id="main">
-            <div class="fv">
-                <div class="fv_image">
-                    <picture>
-                     <source media="(max-width: 767px)" srcset="images/Mask group sp.jpg">
-                     <source media="(min-width: 768px)" srcset="images/Mask group.jpg">
-                     <img src="images/Mask group.jpg" alt="fv_image">
-                   </picture>
+        <section class="main">
+            <img src="images/Mask group.jpg" alt="fv_image">
+                <div class="copy">
+                    <p>滑石きたむら動物病院は</p>
+                     <h1>大切な家族の<br>ホームドクターです</h1>
                 </div>
-            </div>
-            <h1>滑石きたむら動物病院は<br>大切な家族の<br>ホームドクターです</h1>
-            </section>
-            <section id="tsuyomi" class="bg-gray">
-                <div class="title-with-images">
-                <img src="left-image.jpg" alt="images/nikukyu_1.jpg">
-                <h2>強み</h2>
-                <img src="right-image.jpg" alt="images/nikukyu_1.jpg">
+            </div> 
+        </section>
+        <section class="messege">
+            <h2>動物たちの健康で幸せな生活をサポート</h2>
+            <p>
+                当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。<br>
+                緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。<br>
+                動物たちが健康で幸せな生活を送ることができるようサポートいたします。
+            </p>    
+            <img src="images/servicegazou.png"  alt="service_image" class="service-gazou">
+        </section>
+        <section id="tsuyomi" class="bg-gray">
+                <div class="tsuyomi-with-images">
+                 <img src="images/tsuyomimniku.png" alt="アイコン" class="tsuyomi-icon">
+                <h3>強み</h3>
+                 <img src="images/tsuyomimniku.png" alt="アイコン" class="tsuyomi-icon">
                 </div> 
-                <div class="tsuyomi-flex">
-                <div class="tsuyomi-text-area">
+                <div class="tsuyomi-item">
+                 <div class="tsuyomi-text">
                     <h3 class="">経験豊富なスタッフが24時間365日常駐</h3>
                     <p>当院は24時間365日いつでも対応できるよう、豊<br>富な経験を持つ獣医師や看護師が約50名体制で<br>常駐しております。</p>
-                </div>
-                <div class="tsuyomi-img-area">
+                 </div>
+                 <div class="tsuyomi-img">
                     <picture>
                       <source media="(max-width: 767px)" srcset="images/tsuyomi01.jpg">
                       <source media="(min-width: 768px)" srcset="images/tsuyomi01_sp.jpg">
                       <img src="images/tsuyomi01.jpg" alt="tsuyomi01_image">
                     </picture>
-                </div>    
-                <div class="tsuyomi-text-area">
-                    <h3 class="">エキゾチックアニマルも対応します</h3>
-                    <p>犬・猫だけではなく、ウサギやハムスター、爬虫<br>類や両生類、鳥類などエキゾチックアニマルも対<br>応しております。</p>
+                 </div>  
                 </div>
-                <div class="tsuyomi-img-area">
+                <div class="tsuyomi-item">
+                 <div class="tsuyomi-img">
                     <picture>
                       <source media="(max-width: 767px)" srcset="images/tsuyomi02.jpg">
                       <source media="(min-width: 768px)" srcset="images/tsuyomi02_sp.jpg">
                       <img src="images/tsuyomi02.jpg" alt="tsuyomi02_image">
                     </picture>
-                </div>    
-                <div class="tsuyomi-text-area">
+                 </div>    
+                 <div class="tsuyomi-text">
+                    <h3 class="">エキゾチックアニマルも対応します</h3>
+                    <p>犬・猫だけではなく、ウサギやハムスター、爬虫<br>類や両生類、鳥類などエキゾチックアニマルも対<br>応しております。</p>
+                 </div>
+                </div>
+                <div class="tsuyomi-item">
+                 <div class="tsuyomi-text">
                     <h3 class="">ご自宅まで伺う往診も行っています</h3>
                     <p>外出が難しい動物たちや飼い主さまのために、獣<br>医師や看護師がご自宅まで伺う往診サービスも<br>行っております。</p>
-                </div>
-                <div class="tsuyomi-img-area">
+                 </div>
+                 <div class="tsuyomi-img">
                     <picture>
                       <source media="(max-width: 767px)" srcset="images/tsuyomi03.jpg">
                       <source media="(min-width: 768px)" srcset="images/tsuyomi03_sp.jpg">
                       <img src="images/tsuyomi03.jpg" alt="tsuyomi03_image">
                     </picture>
-                </div>    
+                 </div>    
+                </div>
             </section>            
             <section id="service">
              <div class="title-with-images">
                 <img src="left-image.jpg" alt="images/nikukyu_1.jpg">
-                <h2>サービス</h2>
+                <h3>サービス</h3>
                 <img src="right-image.jpg" alt="images/nikukyu_1.jpg">
              </div> 
              <div class="service-list">
@@ -119,7 +130,7 @@
             <section id="oshirase" class="bg-gray">
              <div class="title-with-images">
                 <img src="left-image.jpg" alt="images/nikukyu_1.jpg">
-                <h2>お知らせ</h2>
+                <h3>お知らせ</h3>
                 <img src="right-image.jpg" alt="images/nikukyu_1.jpg">
              </div>    
              
@@ -127,7 +138,7 @@
             <section id="access">
                 <div class="title-with-images">
                 <img src="left-image.jpg" alt="images/nikukyu_1.jpg">
-                <h2>アクセス</h2>
+                <h3>アクセス</h3>
                 <img src="right-image.jpg" alt="images/nikukyu_1.jpg">
              </div>  
              <div class="access-flex">
@@ -145,7 +156,7 @@
             </div>
             <section id="contact" class="contact">
               <div class="inner">
-               <h2 class="section-title">お問い合わせ</h2>
+               <h3 class="section-title">お問い合わせ</h3>
                <p class="section-desc">
                  ご予約やご質問などお気軽にお問い合わせください。<br>お問い合わせいただいてから3日以内の返信となります。
                </p>
