--- a/index.html
+++ b/index.html
@@ -48,57 +48,57 @@
             </p>    
             <img src="images/servicegazou.png"  alt="service_image" class="service-gazou">
         </section>
-        <section id="tsuyomi" class="bg-gray">
+        <section id="tsuyomi" class="bg-cyan">
                 <div class="tsuyomi-with-images">
-                 <img src="images/tsuyomimniku.png" alt="アイコン" class="tsuyomi-icon">
+                 <img src="images/niku.png" alt="アイコン" class="tsuyomi-icon">
                 <h3>強み</h3>
-                 <img src="images/tsuyomimniku.png" alt="アイコン" class="tsuyomi-icon">
+                 <img src="images/niku.png" alt="アイコン" class="tsuyomi-icon">
                 </div> 
                 <div class="tsuyomi-item">
-                 <div class="tsuyomi-text">
-                    <h3 class="">経験豊富なスタッフが24時間365日常駐</h3>
+                 <div class="tsuyomi-text-area">
+                    <h4 class="">経験豊富なスタッフが24時間365日常駐</h4>
                     <p>当院は24時間365日いつでも対応できるよう、豊<br>富な経験を持つ獣医師や看護師が約50名体制で<br>常駐しております。</p>
                  </div>
-                 <div class="tsuyomi-img">
+                 <div class="tsuyomi-img-area">
                     <picture>
-                      <source media="(max-width: 767px)" srcset="images/tsuyomi01.jpg">
-                      <source media="(min-width: 768px)" srcset="images/tsuyomi01_sp.jpg">
+                      <source media="(max-width: 767px)" srcset="images/tsuyomi01_sp.jpg">
+                      <source media="(min-width: 768px)" srcset="images/tsuyomi01.jpg">
                       <img src="images/tsuyomi01.jpg" alt="tsuyomi01_image">
                     </picture>
                  </div>  
                 </div>
                 <div class="tsuyomi-item">
-                 <div class="tsuyomi-img">
+                 <div class="tsuyomi-img-area">
                     <picture>
-                      <source media="(max-width: 767px)" srcset="images/tsuyomi02.jpg">
-                      <source media="(min-width: 768px)" srcset="images/tsuyomi02_sp.jpg">
+                      <source media="(max-width: 767px)" srcset="images/tsuyomi02_sp.jpg">
+                      <source media="(min-width: 768px)" srcset="images/tsuyomi02.jpg">
                       <img src="images/tsuyomi02.jpg" alt="tsuyomi02_image">
                     </picture>
                  </div>    
-                 <div class="tsuyomi-text">
-                    <h3 class="">エキゾチックアニマルも対応します</h3>
+                 <div class="tsuyomi-text-area2">
+                    <h4 class="">エキゾチックアニマルも対応します</h4>
                     <p>犬・猫だけではなく、ウサギやハムスター、爬虫<br>類や両生類、鳥類などエキゾチックアニマルも対<br>応しております。</p>
                  </div>
                 </div>
                 <div class="tsuyomi-item">
-                 <div class="tsuyomi-text">
-                    <h3 class="">ご自宅まで伺う往診も行っています</h3>
+                 <div class="tsuyomi-text-area">
+                    <h4 class="">ご自宅まで伺う往診も行っています</h4>
                     <p>外出が難しい動物たちや飼い主さまのために、獣<br>医師や看護師がご自宅まで伺う往診サービスも<br>行っております。</p>
                  </div>
-                 <div class="tsuyomi-img">
+                 <div class="tsuyomi-img-area">
                     <picture>
-                      <source media="(max-width: 767px)" srcset="images/tsuyomi03.jpg">
-                      <source media="(min-width: 768px)" srcset="images/tsuyomi03_sp.jpg">
+                      <source media="(max-width: 767px)" srcset="images/tsuyomi03_sp.jpg">
+                      <source media="(min-width: 768px)" srcset="images/tsuyomi03.jpg">
                       <img src="images/tsuyomi03.jpg" alt="tsuyomi03_image">
                     </picture>
                  </div>    
                 </div>
             </section>            
             <section id="service">
-             <div class="title-with-images">
-                <img src="left-image.jpg" alt="images/nikukyu_1.jpg">
+             <div class="service-with-images">
+                <img src="images/niku.png" alt="アイコン" class="service-icon">
                 <h3>サービス</h3>
-                <img src="right-image.jpg" alt="images/nikukyu_1.jpg">
+                 <img src="images/niku.png" alt="アイコン" class="service-icon">
              </div> 
              <div class="service-list">
                 <div class="service-content">
@@ -127,32 +127,58 @@
                 </div>
              </div>
             </section>
-            <section id="oshirase" class="bg-gray">
-             <div class="title-with-images">
-                <img src="left-image.jpg" alt="images/nikukyu_1.jpg">
+            <section id="news" class="bg-cyan">
+             <div class="news-with-images">
+                <img src="images/niku.png" alt="アイコン" class="news-icon">
                 <h3>お知らせ</h3>
-                <img src="right-image.jpg" alt="images/nikukyu_1.jpg">
-             </div>    
-             
+                <img src="images/niku.png" alt="アイコン" class="news-icon">
+             </div>  
+             <ul class="news-list">
+                <li class="news-item">
+                    <span class="news-date">0000.00.00</span>
+                    <a href="#" class="news-title">去勢手術の助成金</a>
+                    <p class="news-text">長崎県より犬猫去勢手術の助成金制度が導入されました。</p>
+                </li>
+                <li class="news-item">
+                    <span class="news-date">0000.00.00</span>
+                    <a href="#" class="news-title">往診の範囲が拡大</a>
+                    <p class="news-text">往診の範囲を長崎市内から長崎県内まで拡大しました。</p>
+                </li>
+                <li class="news-item">
+                    <span class="news-date">0000.00.00</span>
+                    <a href="#" class="news-title">新年のご挨拶</a>
+                    <p class="news-text">謹賀新年。今年もよろしくお願いいたします。</p>
+                </li>
+                <li class="news-item">
+                    <span class="news-date">0000.00.00</span>
+                    <a href="#" class="news-title">年末年始の診療</a>
+                    <p class="news-text">当院では年末年始も24時間休まず診療しております。</p>
+                </li>
+                <li class="news-item">
+                    <span class="news-date">0000.00.00</span>
+                    <a href="#" class="news-title">開院11周年</a>
+                    <p class="news-text">当院開院11周年を迎えることとなりました。</p>
+                </li>
+             </ul>
             </section>
             <section id="access">
-                <div class="title-with-images">
-                <img src="left-image.jpg" alt="images/nikukyu_1.jpg">
+                <div class="access-with-images">
+                <img src="images/niku.png" alt="アイコン" class="access-icon">
                 <h3>アクセス</h3>
-                <img src="right-image.jpg" alt="images/nikukyu_1.jpg">
+                <img src="images/niku.png" alt="アイコン" class="access-icon">
              </div>  
-             <div class="access-flex">
-                <div class="access-text-area">
-                    <h3 class="">滑石きたむら動物病院</h3>
-                    <p>〒852-8065  長崎県長崎市横尾○丁目○-○<br><br></p>
-                </div>
-                <div class="about-img-area">
+                <div class="access-flex">
+                <div class="access-img-area">
                     <picture>
                       <source media="(max-width: 767px)" srcset="images/access_map_sp.jpg">
                       <source media="(min-width: 768px)" srcset="images/access_map.jpg">
-                      <img src="images/access_map.jpg" alt="about_image">
-                    </picture>
-                </div>    
+                      <img src="images/access_map.jpg" alt="access_image">  
+                </picture>
+                </div> 
+                <div class="access-text-area">
+                    <h3 class="">滑石きたむら動物病院</h3>
+                    <p>〒852-8065  長崎県長崎市横尾○丁目○-○<br></p>
+                </div>                 
             </div>
             <section id="contact" class="contact">
               <div class="inner">
