--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                  </div>
                 </div>
                 <div class="tsuyomi-item">
-                 <div class="tsuyomi-text-area">
+                 <div class="tsuyomi-text-area3">
                     <h4 class="">ご自宅まで伺う往診も行っています</h4>
                     <p>外出が難しい動物たちや飼い主さまのために、獣<br>医師や看護師がご自宅まで伺う往診サービスも<br>行っております。</p>
                  </div>
@@ -176,15 +176,25 @@
                 </picture>
                 </div> 
                 <div class="access-text-area">
-                    <h3 class="">滑石きたむら動物病院</h3>
-                    <p>〒852-8065  長崎県長崎市横尾○丁目○-○<br></p>
+                    <h5 class="clinic-name">滑石きたむら動物病院</h5>
+                    <p class="address">〒852-8065  長崎県長崎市横尾○丁目○-○</p>
+                    <p class="tel">電話：<span class="number">000-0000-0000</span></p>
+                    <p class="mail">メール:info@example.com</p>
+                    <hr>
+                    <p class="time">診療時間：24時間365日</p>
+                    <p class="holiday">休診日：なし</p>
+                    <hr>
                 </div>                 
             </div>
+            </section>
             <section id="contact" class="contact">
-              <div class="inner">
-               <h3 class="section-title">お問い合わせ</h3>
-               <p class="section-desc">
-                 ご予約やご質問などお気軽にお問い合わせください。<br>お問い合わせいただいてから3日以内の返信となります。
+              <div class="contact-with-images">
+                <img src="images/niku.png" alt="アイコン" class="contact-icon">
+                <h3 class="section-title">お問い合わせ</h3>
+                <img src="images/niku.png" alt="アイコン" class="contact-icon">
+              </div> 
+              <div class="desc">
+               <p class="section-desc">ご予約やご質問などお気軽にお問い合わせください。<br>お問い合わせいただいてから3日以内の返信となります。
                </p>
               </div>
               <div class="contact__form form">
@@ -208,7 +218,7 @@
                         </dl>
                         <dl class="form__item">
                           <dt class="form__label">
-                             <label for="content">内容</label>
+                             <label for="content">内　容</label>
                           </dt>
                           <dd class="form__textarea">
                              <textarea name="content" id="content"></textarea>
@@ -217,8 +227,8 @@
                     </div>
                     <div class="contact__button">
                       <input type="submit" value="送 信">
-                </form>
-              </div>
+                    </div>  
+                </form>  
             </section>
             <footer class="footer">
                 <div class="inner">
@@ -255,22 +265,22 @@
                     <ul class="footer_sns sns">
                         <li class="sns_list">
                             <a href="" class="sns_link sns_link--x" target="_blank" rel="noopener noreferrer">
-                                <img src="./images/x.svg" alt="x">
+                                <img src="./images/icon_twitter.png" alt="x">
                             </a>
                         </li>
-                        <li class="sns__list">
-                            <a href="" class="sns__link" target="_blank" rel="noopener noreferrer">
-                                 <img src="./images/facebook.svg" alt="facebook">
+                        <li class="sns_list">
+                            <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
+                                 <img src="./images/icon_facebook.png" alt="facebook">
                             </a>
                         </li>
-                        <li class="sns__list">
-                            <a href="" class="sns__link" target="_blank" rel="noopener noreferrer">
-                                 <img src="./images/youtube.svg" alt="youtube">
+                        <li class="sns_list">
+                            <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
+                                 <img src="./images/icon_youtube.png" alt="youtube">
                             </a>
                         </li>
-                        <li class="sns__list">
-                            <a href="" class="sns__link" target="_blank" rel="noopener noreferrer">
-                                  <img src="./images/instagram.svg" alt="instagram">
+                        <li class="sns_list">
+                            <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
+                                  <img src="./images/icon_instagram.png" alt="instagram">
                             </a>
                         </li>
                     </ul>
