--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div id="container">
-        <header class="header">
+    <header class="header">
+        <div class="container">
             <div href="#" class="title">
                 <img src="images/nikukyu_1.jpg" alt="アイコン" class="header-icon">
                 <span class="header-title">滑石きたむら動物病院</span>
@@ -32,22 +32,23 @@
                     </ul>
                 </nav>
             </div>
-        </header>
-        <section class="main">
-            <div class="fv">
-                <div class="fv_image">
-                    <picture>
-                     <source media="(max-width: 768px)" srcset="images/Mask-group-sp.jpg">
-                     <source media="(min-width: 767px)" srcset="images/Mask-group.jpg">
-                     <img src="images/Mask-group.jpg" alt="fv_image">
-                   </picture>
-                </div>
+        </div>
+    </header>
+    <section class="main">
+        <div class="fv">
+            <div class="fv_image">
+                <picture>
+                <source media="(max-width: 768px)" srcset="images/Mask-group-sp.jpg">
+                <source media="(min-width: 767px)" srcset="images/Mask-group.jpg">
+                <img src="images/Mask-group.jpg" alt="fv_image">
+            </picture>
             </div>
-                <div class="main_copy">
-                    <p>滑石きたむら動物病院は</p>
-                     <h1>大切な家族の<br>ホームドクターです</h1>
-                </div>
-        </section>
+        </div>
+        <div class="main_copy">
+            <p>滑石きたむら動物病院は</p>
+            <h1>大切な家族の<br>ホームドクターです</h1>
+        </div>
+    </section>
         <section class="message">
             <h2>動物たちの健康で<span class="br-sp"></span>幸せな生活をサポート</h2>
             <p>
