--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <header class="header">
         <div class="container">
-            <div href="#" class="title">
+            <a href="#" class="title">
                 <img src="images/nikukyu_1.jpg" alt="アイコン" class="header-icon">
                 <span class="header-title">滑石きたむら動物病院</span>
-            </div>    
+            </a>    
             <div class="nav_content">
                 <nav class="header_nav li">
                     <ul class="nav_list">
@@ -44,21 +44,23 @@
             </picture>
             </div>
         </div>
-        <div class="main_copy">
+            <div class="main_copy">
             <p>滑石きたむら動物病院は</p>
             <h1>大切な家族の<br>ホームドクターです</h1>
-        </div>
+            </div>
     </section>
-        <section class="message">
-            <h2>動物たちの健康で<span class="br-sp"></span>幸せな生活をサポート</h2>
-            <p>
+    <section class="message">
+            <div class="container">
+                <h2>動物たちの健康で<span class="br-sp"></span>幸せな生活をサポート</h2>
+                <p>
                 当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。<br>
                 緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。<br>
                 動物たちが健康で幸せな生活を送ることができるようサポートいたします。
-            </p>    
-            <img src="images/servicegazou.png"  alt="service_image" class="service-gazou">
-        </section>
-        <section id="tsuyomi" class="bg-cyan">
+                </p>    
+                <img src="images/servicegazou.png"  alt="service_image" class="service-gazou">
+            </div>     
+    </section>
+    <section id="tsuyomi" class="bg-cyan">
                 <div class="tsuyomi-with-images">
                  <img src="images/niku.png" alt="アイコン" class="tsuyomi-icon">
                 <h3>強み</h3>
@@ -102,9 +104,9 @@
                       <img src="images/tsuyomi03.jpg" alt="tsuyomi03_image">
                     </picture>
                  </div>    
-                </div>
-            </section>            
-            <section id="service">
+            </div>
+    </section>            
+    <section id="service">
              <div class="service-with-images">
                 <img src="images/niku.png" alt="アイコン" class="service-icon">
                 <h3>サービス</h3>
@@ -136,8 +138,8 @@
                     </ul>
                 </div>
              </div>
-            </section>
-            <section id="news" class="bg-cyan">
+    </section>
+    <section id="news" class="bg-cyan">
              <div class="news-with-images">
                 <img src="images/niku.png" alt="アイコン" class="news-icon">
                 <h3>お知らせ</h3>
@@ -170,8 +172,8 @@
                     <p class="news-text">当院開院11周年を迎えることとなりました。</p>
                 </li>
              </ul>
-            </section>
-            <section id="access">
+    </section>
+    <section id="access">
                 <div class="access-with-images">
                 <img src="images/niku.png" alt="アイコン" class="access-icon">
                 <h3>アクセス</h3>
@@ -179,9 +181,9 @@
              </div>  
                 <div class="access-flex">
                 <div class="access-img-area">
-                    <iframe 
+                    <iframe
                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3353.2367610508963!2d129.83669517454268!3d32.812491173648816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356aad0aefe2a6b9%3A0x13f32e3d4c83018!2z44CSODUyLTgwNjUg6ZW35bSO55yM6ZW35bSO5biC5qiq5bC-77yR5LiB55uu77yV4oiS77yT77yW!5e0!3m2!1sja!2sjp!4v1750730694707!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                       </iframe>           
+                    </iframe>           
                 </div> 
                 <div class="access-text-area">
                     <h5 class="clinic-name">滑石きたむら動物病院</h5>
@@ -197,8 +199,8 @@
                     <hr>
                 </div>                 
             </div>
-            </section>
-            <section id="contact" class="contact">
+    </section>
+    <section id="contact" class="contact">
               <div class="contact-with-images">
                 <img src="images/niku.png" alt="アイコン" class="contact-icon">
                 <h3 class="section-title">お問い合わせ</h3>
@@ -207,7 +209,7 @@
               <div class="desc">
                <p class="section-desc">
                 ご予約やご質問などお気軽にお問い合わせください。<br>
-                お問い合わせいただいてから3日以内の返信となります。
+                お問い合わせいただいてから3日以内の変身となります。
                </p>
               </div>
               <div class="contact_form">
@@ -231,7 +233,7 @@
                     </div> 
                 </form> 
               </div>  
-            </section>
+        </section>
             <footer class="footer">
                 <div class="inner">
                     <div class="footer_content">
@@ -290,7 +292,7 @@
                     </ul>
                 </div>
             </footer>
-            </section>
+        
     </div>
 </body>
 </html>
