--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="fv_image">
                 <picture>
                 <source media="(max-width: 768px)" srcset="images/Mask-group-sp.jpg">
-                <source media="(min-width: 767px)" srcset="images/Mask-group.jpg">
-                <img src="images/Mask-group.jpg" alt="fv_image">
+                <source media="(min-width: 767px)" srcset="images/Mask-group.png">
+                <img src="images/Mask-group.png" alt="fv_image">
             </picture>
             </div>
         </div>
