--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                  </div>    
                  <div class="tsuyomi-text-area2">
                     <h4 class="">エキゾチックアニマルも対応します</h4>
-                    <p>犬・猫だけではなく、ウサギやハムスター、爬虫類や両生類、鳥類などエキゾチックアニマルも対応しております。</p>
+                    <p>犬・猫だけではなく、ウサギやハムスター、<span class="br-sp"></span>爬虫類や両生類、鳥類などエキゾチックアニ<span class="br-sp"></span>マルも対応しております。</p>
                  </div>
                 </div>
                 <div class="tsuyomi-item">
                  <div class="tsuyomi-text-area3">
                     <h4 class="">ご自宅まで伺う往診も行っています</h4>
-                    <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも行っております。</p>
+                    <p>外出が難しい動物たちや飼い主さまのため<span class="br-sp"></span>に、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも行っております。</p>
                  </div>
                  <div class="tsuyomi-img-area">
                     <picture>
@@ -114,7 +114,11 @@
              </div> 
              <div class="service-list">
                 <div class="service-content">
-                    <img src="images/service01.jpg" alt="service01_img">
+                    <picture>
+                      <source media="(max-width: 767px)" srcset="images/service01_sp.jpg">
+                      <source media="(min-width: 768px)" srcset="images/service01.jpg">
+                      <img src="images/service01.jpg" alt="service01_img">
+                    </picture>
                     <p>往診サービス</p>
                     <ul class="item-list">
                         <li>シニアや介護などのペットのため</li>
@@ -122,7 +126,11 @@
                     </ul>
                 </div>
                 <div class="service-content">
-                    <img src="images/service02.jpg" alt="service02_img">
+                    <picture>
+                      <source media="(max-width: 767px)" srcset="images/service02_sp.jpg">
+                      <source media="(min-width: 768px)" srcset="images/service02.jpg">
+                      <img src="images/service02.jpg" alt="service01_img">
+                    </picture>
                     <p>ペットホテル</p>
                     <ul class="item-list">
                         <li>短時間の一時預かりから宿泊まで</li>
@@ -130,7 +138,11 @@
                     </ul>
                 </div>
                 <div class="service-content">
-                    <img src="images/service03.jpg" alt="service03_img">
+                    <picture>
+                      <source media="(max-width: 767px)" srcset="images/service03_sp.jpg">
+                      <source media="(min-width: 768px)" srcset="images/service03.jpg">
+                      <img src="images/service03.jpg" alt="service01_img">
+                    </picture>
                     <p>トリミング</p>
                     <ul class="item-list">
                          <li>動物の体に負担をかけない技術や</li>
