--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <li class="news-item">
                     <span class="news-date">0000.00.00</span>
                     <a href="#" class="news-title">開院11周年</a>
-                    <p class="news-text">当院開院11周年を迎えることとなりました。</p>
+                    <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
                 </li>
              </ul>
     </section>
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                     <div class="contact_button">
-                      <input type="submit" value="送 信">
+                      <input type="submit" value="送 信" class="submit">
                     </div> 
                 </form> 
               </div>  
