--- a/index.html
+++ b/index.html
@@ -60,48 +60,48 @@
             <img src="images/servicegazou.png"  alt="service_image" class="service-gazou">
         </div>     
     </section>
-    <section id="tsuyomi" class="bg-cyan">
-            <div class="tsuyomi-with-images">
-                <img src="images/niku.png" alt="アイコン" class="tsuyomi-icon">
+    <section id="strengths" class="bg-cyan">
+            <div class="strengths-with-images">
+                <img src="images/niku.png" alt="アイコン" class="strengths-icon">
                 <h3>強み</h3>
-                <img src="images/niku.png" alt="アイコン" class="tsuyomi-icon">
+                <img src="images/niku.png" alt="アイコン" class="strengths-icon">
             </div> 
-            <div class="tsuyomi-item">
-                <div class="tsuyomi-text-area">
+            <div class="strengths-item">
+                <div class="strengths-text-area">
                 <h4 class="">経験豊富なスタッフが<span class="br-sp"></span>24時間365日常駐</h4>
                 <p>当院は24時間365日いつでも対応できるよう、豊富な経験を持つ獣医師や看護師が約50名体制で常駐しております。</p>
                 </div>
-                <div class="tsuyomi-img-area">
+                <div class="strengths-img-area">
                     <picture>
-                        <source media="(max-width: 767px)" srcset="images/tsuyomi01_sp.jpg">
-                        <source media="(min-width: 768px)" srcset="images/tsuyomi01.jpg">
-                        <img src="images/tsuyomi01.jpg" alt="tsuyomi01_image">
+                        <source media="(max-width: 767px)" srcset="images/strengths01_sp.jpg">
+                        <source media="(min-width: 768px)" srcset="images/strengths01.jpg">
+                        <img src="images/strengths01.jpg" alt="strengths01_image">
                     </picture>
                 </div>  
             </div>
-            <div class="tsuyomi-item">
-                <div class="tsuyomi-img-area">
+            <div class="strengths-item">
+                <div class="strengths-img-area">
                     <picture>
-                        <source media="(max-width: 767px)" srcset="images/tsuyomi02_sp.jpg">
-                        <source media="(min-width: 768px)" srcset="images/tsuyomi02.jpg">
-                        <img src="images/tsuyomi02.jpg" alt="tsuyomi02_image">
+                        <source media="(max-width: 767px)" srcset="images/strengths02_sp.jpg">
+                        <source media="(min-width: 768px)" srcset="images/strengths02.jpg">
+                        <img src="images/strengths02.jpg" alt="strengths02_image">
                     </picture>
                 </div>    
-                <div class="tsuyomi-text-area2">
+                <div class="strengths-text-area2">
                     <h4 class="">エキゾチックアニマルも対応します</h4>
                     <p>犬・猫だけではなく、ウサギやハムスター、<span class="br-sp"></span>爬虫類や両生類、鳥類などエキゾチックアニ<span class="br-sp"></span>マルも対応しております。</p>
                     </div>
                 </div>
-            <div class="tsuyomi-item">
-                <div class="tsuyomi-text-area3">
+            <div class="strengths-item">
+                <div class="strengths-text-area3">
                     <h4 class="">ご自宅まで伺う往診も行っています</h4>
                     <p>外出が難しい動物たちや飼い主さまのため<span class="br-sp"></span>に、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも行っております。</p>
                 </div>
-                <div class="tsuyomi-img-area">
+                <div class="strengths-img-area">
                     <picture>
-                        <source media="(max-width: 767px)" srcset="images/tsuyomi03_sp.jpg">
-                        <source media="(min-width: 768px)" srcset="images/tsuyomi03.jpg">
-                        <img src="images/tsuyomi03.jpg" alt="tsuyomi03_image">
+                        <source media="(max-width: 767px)" srcset="images/strengths03_sp.jpg">
+                        <source media="(min-width: 768px)" srcset="images/strengths03.jpg">
+                        <img src="images/strengths03.jpg" alt="strengths03_image">
                     </picture>
                 </div>    
             </div>
