--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="inner">
             <div class="strengths-with-images">
                 <img src="images/niku.png" alt="アイコン" class="strengths-icon">
-                <h2>強み</h2>
+                <h3>強み</h3>
                 <img src="images/niku.png" alt="アイコン" class="strengths-icon">
             </div> 
             <div class="strengths-item">
@@ -124,6 +124,10 @@
                         <img src="images/service01.jpg" alt="service01_img">
                     </picture>
                     <h3>往診サービス</h3>
+                    <!--<ul class="item-list">
+                        <li>シニアや介護などのペットのため</li>
+                        <li>の自宅で診療するサービスです。</li>
+                    </ul>-->
                     <p>シニアや介護などのペットのための自宅で診療するサービスです。</p>
                 </div>
                 <div class="service-content">
@@ -133,6 +137,7 @@
                       <img src="images/service02.jpg" alt="service01_img">
                     </picture>
                     <h3>ペットホテル</h3>
+
                     <p>短時間の一時預かりから宿泊までご利用いただけるサービスです。</p>
                 </div>
                 <div class="service-content">
@@ -148,7 +153,6 @@
         </div>
     </section>
     <section id="news" class="bg-cyan">
-        <div class="inner">
             <div class="news-with-images">
                 <img src="images/niku.png" alt="アイコン" class="news-icon">
                 <h3>お知らせ</h3>
@@ -181,10 +185,8 @@
                     <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
                 </li>
             </ul>
-        </div>
     </section>
     <section id="access">
-        <div class="inner">
             <div class="access-with-images">
                 <img src="images/niku.png" alt="アイコン" class="access-icon">
                 <h3>アクセス</h3>
@@ -210,10 +212,8 @@
                     <hr>
                 </div>                 
             </div>
-        </div>
     </section>
     <section id="contact" class="contact">
-        <div class="inner">
             <div class="contact-with-images">
                 <img src="images/niku.png" alt="アイコン" class="contact-icon">
                 <h3 class="section-title">お問い合わせ</h3>
@@ -246,7 +246,6 @@
                     </div> 
                 </form> 
             </div>  
-        </div>
     </section>
     <footer class="footer">
         <div class="inner">
