--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="strengths-item">
                 <div class="strengths-text-area3">
                     <h4 class="">ご自宅まで伺う往診も行っています</h4>
-                    <p>外出が難しい動物たちや飼い主さまのため<span class="br-sp"></span>に、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも行っております。</p>
+                    <p>外出が難しい動物たちや飼い主さまのため<span class="br-sp"></span>に、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも<br class="br-pc">行っております。</p>
                 </div>
                 <div class="strengths-img-area">
                     <picture>
