--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>animal hospital</title>
-    <meta name="description" content="THE LITTLE CAFEのサイトです">
+    <meta name="description" content="animal hospitalのサイトです">
     <meta name="keywords" content="動物病院">
     <meta name="robots" content="noindex">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
     <header class="header">
