--- a/index.html
+++ b/index.html
@@ -125,10 +125,6 @@
                         <img src="images/service01.jpg" alt="service01_img">
                     </picture>
                     <h3>往診サービス</h3>
-                    <!--<ul class="item-list">
-                        <li>シニアや介護などのペットのため</li>
-                        <li>の自宅で診療するサービスです。</li>
-                    </ul>-->
                     <p>シニアや介護などのペットのための自宅で診療するサービスです。</p>
                 </div>
                 <div class="service-content">
@@ -223,7 +219,7 @@
             <div class="desc">
                <p class="section-desc">
                 ご予約やご質問などお気軽にお問い合わせください。<br>
-                お問い合わせいただいてから3日以内の変身となります。
+                お問い合わせいただいてから3日以内の返信となります。
                </p>
             </div>
             <div class="contact_form">
