--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
             <a href="#" class="title">
-                <img src="images/nikukyu_1.jpg" alt="アイコン" class="header-icon">
+                <img src="images/niku.svg" alt="アイコン" class="header-icon">
                 <span class="header-title">滑石きたむら動物病院</span>
             </a>             
             <div class="nav_content">
@@ -41,8 +41,8 @@
             <div class="fv_image">
                 <picture>
                 <source media="(max-width: 768px)" srcset="images/Mask-group-sp.jpg">
-                <source media="(min-width: 767px)" srcset="images/Mask-group.png">
-                <img src="images/Mask-group.png" alt="fv_image">
+                <source media="(min-width: 767px)" srcset="images/Mask-group.jpg">
+                <img src="images/Mask-group.jpg" alt="fv_image">
                 </picture>
             </div>
         </div>
@@ -65,9 +65,9 @@
     <section id="strengths" class="bg-cyan">
         <div class="inner">
             <div class="strengths-with-images">
-                <img src="images/niku.png" alt="アイコン" class="strengths-icon">
+                <img src="images/niku.svg" alt="アイコン" class="strengths-icon">
                 <h3>強み</h3>
-                <img src="images/niku.png" alt="アイコン" class="strengths-icon">
+                <img src="images/niku.svg" alt="アイコン" class="strengths-icon">
             </div> 
             <div class="strengths-item">
                 <div class="strengths-text-area">
@@ -113,9 +113,9 @@
     <section id="service">
         <div class="inner">
             <div class="service-with-images">
-                <img src="images/niku.png" alt="アイコン" class="service-icon">
+                <img src="images/niku.svg" alt="アイコン" class="service-icon">
                 <h2>サービス</h2>
-                <img src="images/niku.png" alt="アイコン" class="service-icon">
+                <img src="images/niku.svg" alt="アイコン" class="service-icon">
             </div> 
             <div class="service-list">
                 <div class="service-content">
@@ -151,9 +151,9 @@
     </section>
     <section id="news" class="bg-cyan">
             <div class="news-with-images">
-                <img src="images/niku.png" alt="アイコン" class="news-icon">
+                <img src="images/niku.svg" alt="アイコン" class="news-icon">
                 <h3>お知らせ</h3>
-                <img src="images/niku.png" alt="アイコン" class="news-icon">
+                <img src="images/niku.svg" alt="アイコン" class="news-icon">
             </div>  
             <ul class="news-list">
                 <li class="news-item">
@@ -185,9 +185,9 @@
     </section>
     <section id="access">
             <div class="access-with-images">
-                <img src="images/niku.png" alt="アイコン" class="access-icon">
+                <img src="images/niku.svg" alt="アイコン" class="access-icon">
                 <h3>アクセス</h3>
-                <img src="images/niku.png" alt="アイコン" class="access-icon">
+                <img src="images/niku.svg" alt="アイコン" class="access-icon">
             </div>  
             <div class="access-flex">
                 <div class="access-img-area">
@@ -212,9 +212,9 @@
     </section>
     <section id="contact" class="contact">
             <div class="contact-with-images">
-                <img src="images/niku.png" alt="アイコン" class="contact-icon">
+                <img src="images/niku.svg" alt="アイコン" class="contact-icon">
                 <h3 class="section-title">お問い合わせ</h3>
-                <img src="images/niku.png" alt="アイコン" class="contact-icon">
+                <img src="images/niku.svg" alt="アイコン" class="contact-icon">
             </div> 
             <div class="desc">
                <p class="section-desc">
@@ -281,22 +281,22 @@
             <ul class="footer_sns sns">
                 <li class="sns_list">
                     <a href="" class="sns_link sns_link--x" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/icon_twitter.png" alt="x">
+                        <img src="./images/icon_twitter.svg" alt="x">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_facebook.png" alt="facebook">
+                            <img src="./images/icon_facebook.svg" alt="facebook">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_youtube.png" alt="youtube">
+                            <img src="./images/icon_youtube.svg" alt="youtube">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_instagram.png" alt="instagram">
+                            <img src="./images/icon_instagram.svg" alt="instagram">
                     </a>
                 </li>
             </ul>
