--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <nav class="header_nav li">
                     <ul class="nav_list">
                         <li><a href="#ご挨拶" class="nav_btn">ご挨拶</a></li>
-                        <li><a href="#強み" class="nav_btn">強み</a></li>
-                        <li><a href="#サービス" class="nav_btn">サービス</a></li>
-                        <li><a href="#お知らせ" class="nav_btn">お知らせ</a></li>
-                        <li><a href="#アクセス" class="nav_btn">アクセス</a></li>
-                        <li><a href="#お問い合わせ" class="nav_btn">お問い合わせ</a></li>
+                        <li><a href="#strengths" class="nav_btn">強み</a></li>
+                        <li><a href="#service" class="nav_btn">サービス</a></li>
+                        <li><a href="#news" class="nav_btn">お知らせ</a></li>
+                        <li><a href="#access" class="nav_btn">アクセス</a></li>
+                        <li><a href="#contact" class="nav_btn">お問い合わせ</a></li>
                     </ul>
                 </nav>
             </div>
